Adding man pages.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@
 
 S3method(plot,stambaugh)
 export(compareCov)
+export(lw_linear_shrinkage)
 export(plotmissing)
+export(robustMultExpSmoothing)
+export(smoothing.matrix)
 export(stambaugh.distance.plot)
 export(stambaugh.ellipse.plot)
 export(stambaugh.est)
@@ -18,4 +21,7 @@ import(xts)
 import(zoo)
 importFrom(FactorAnalytics,fitTsfm)
 importFrom(fit.models,ellipsesPlot.covfm)
+importFrom(optimx,optimx)
+importFrom(parallel,parRapply)
+importFrom(parallel,parSapply)
 importFrom(robust,covRob.control)
