Add facmodTS, remove CerioliOutlierDetection, remov dependency on robust, remove plotmissing from VIM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,18 +10,15 @@ export(stambaugh.distance.plot)
 export(stambaugh.ellipse.plot)
 export(stambaugh.est)
 export(stambaugh.fit)
-import(CerioliOutlierDetection)
 import(RCurl)
-import(VIM)
 import(ggplot2)
 import(reshape2)
-import(robust)
 import(robustbase)
 import(xts)
 import(zoo)
-importFrom(FactorAnalytics,fitTsfm)
+importFrom(facmodTS,fitTsfm)
 importFrom(fit.models,ellipsesPlot.covfm)
 importFrom(optimx,optimx)
 importFrom(parallel,parRapply)
 importFrom(parallel,parSapply)
-importFrom(robust,covRob.control)
+importFrom(robustbase, rrcov.control)
