--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,4 @@ importFrom(optimx,optimx)
 importFrom(parallel,parRapply)
 importFrom(parallel,parSapply)
 importFrom(robustbase, rrcov.control)
+importFrom(RobStatTM, covRobRocke)
