Allow plotting of time series of covariance and correlation matrices.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(MatrixXTS)
 export(compareCov)
 export(create_matrix_xts)
 export(lw_linear_shrinkage)
+export(plot_matrix_changes)
 export(plotmissing)
 export(robustMultExpSmoothing)
 export(smoothing.matrix)
@@ -33,7 +34,21 @@ import(zoo)
 importFrom(RobStatTM,covRobRocke)
 importFrom(facmodTS,fitTsfm)
 importFrom(fit.models,ellipsesPlot.covfm)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(optimx,optimx)
 importFrom(parallel,parRapply)
 importFrom(parallel,parSapply)
 importFrom(robustbase,rrcov.control)
+importFrom(stats,end)
+importFrom(stats,lag)
+importFrom(stats,start)
+importFrom(xts,to.period)
+importFrom(xts,xts)
+importFrom(zoo,coredata)
+importFrom(zoo,index)
